# ideas-ws

./: Cargo.toml  README.md  config.json
auth/: Cargo.toml
auth/src/: main.rs
auth/src/endpoints/: mod.rs  status.rs
common/: Cargo.toml
common/src/: client.rs  country.rs  currency.rs  data_source.rs  lib.rs  role.rs  tenant.rs  user.rs
common/src/hr/: employee.rs  mod.rs  people.rs
configuration/: Cargo.toml
configuration/src/: lib.rs
data/: Cargo.toml
data/src/: lib.rs
data/src/pg/: email.rs  mod.rs
mailer/: Cargo.toml
mailer/src/: lib.rs
modules/accounting/: Cargo.toml
modules/accounting/src/: lib.rs
modules/auth/: Cargo.toml
modules/auth/src/: auth.rs  data.rs  lib.rs  user.rs  user_data.rs
modules/auth/src/validators/: mod.rs  password.rs
modules/clients/: Cargo.toml
modules/clients/src/: clients.rs  data.rs  lib.rs
modules/clients/src/data/: client.rs
modules/common/: Cargo.toml
modules/common/src/: countries.rs  lib.rs
modules/crms/: Cargo.toml
modules/crms/src/: people.rs
modules/crms/src/data/: people.rs
modules/hr/: Cargo.toml
modules/hr/src/: employees.rs  lib.rs
modules/hr/src/data/: employees.rs
modules/people/: Cargo.toml
modules/people/src/: lib.rs  people.rs
modules/people/src/data/: people.rs
modules/pg/: Cargo.toml
modules/pg/src/: lib.rs  slug.rs
modules/roles/: Cargo.toml
modules/roles/src/: data.rs  lib.rs  roles.rs
modules/tenants/: Cargo.toml
modules/tenants/src/: data.rs  lib.rs  members.rs  organizations.rs  tenants.rs
modules/tenants/src/data/: mod.rs  organizations.rs  tenants.rs
modules/users/: Cargo.toml
modules/users/src/: data.rs  lib.rs  users.rs
modules/users/src/data/: users.rs
modules/util/: Cargo.toml
modules/util/src/: countries.rs  currencies.rs  lib.rs
modules/util/src/data/: countries.rs  currencies.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
server/src/classes/: mod.rs  user.rs
server/src/classes/extractors/: user.rs
server/src/classes/guards/: authenticated.rs  mod.rs  permission.rs
server/src/endpoints/: auth.rs  mod.rs  user.rs
server/src/endpoints/accounting/: accounts.rs
server/src/endpoints/clients/: client.rs  members.rs  mod.rs
server/src/endpoints/common/: countries.rs  currencies.rs  mod.rs
server/src/endpoints/crms/: people.rs
server/src/endpoints/hr/: employees.rs  mod.rs
server/src/endpoints/tenants/: mod.rs  organizations.rs  tenants.rs
server/src/middleware/: auth.rs  cors.rs  mod.rs
swagger/: Dockerfile  auth.json  client.json  tenants.json  user.json
tests/thunder-tests/: thunderActivity.json  thunderCollection.json  thunderclient.json
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs
