[workspace]
members = [
    "configuration",
    "common",
    "data",
    "mailer",
    "tokenizer",
    "modules/auth",
    "modules/users",
    "modules/roles",
    "modules/util",
    "modules/tenants",
    "modules/accounting",
    "modules/people",
    "modules/crms",
    "modules/hr",
    "server"
]