[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

http = "*"
actix-web = { version = "4", features = ["rustls"] }
actix-http = "*"


configuration = { path = "../configuration" }
