[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

http = "*"
actix-web = { version = "4", features = ["rustls"] }
actix-http = "*"

uuid = { version = "0.8.2", features = ["v4", "serde"] }

deadpool = "0.9.3"
deadpool-postgres = "0.10.1"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
postgres-types = { version = "*", features = ["derive"] }

configuration = { path = "../configuration" }
auth = { path = "../modules/auth" }
