[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"

hmac = "*"
sha2 = "*"
jwt = "*"

uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"]}