[package]
name = "hr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"

rand = "*"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"]}
serde = { version = "*", features = ["derive"] }

deadpool = "0.9.3"
deadpool-postgres = "0.10.1"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-chrono-0_4"] }
postgres-types = { version = "*", features = ["derive"] }


configuration = { path = "../../configuration" }
common = { path = "../../common" }
pg = { path = "../pg" }