[package]
name = "pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"

tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
postgres-types = { version = "*", features = ["derive"] }